--- a/app/src/main/res/layout/opportunity_table_layout.xml
+++ b/app/src/main/res/layout/opportunity_table_layout.xml
@@ -44,6 +44,7 @@
                     android:layout_margin="10dp"
                     android:layout_marginTop="@dimen/layout_margin"
                     android:layout_weight="1"
+                    android:inputType="number"
                     android:background="@drawable/edit_background"
                     android:drawablePadding="@dimen/view_padding"
                     android:maxLength="50"
@@ -77,6 +78,7 @@
             <EditText
                 android:id="@+id/edt_aum"
                 android:layout_width="0dp"
+                android:inputType="number"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginTop="@dimen/layout_margin"
@@ -115,6 +117,7 @@
                 android:id="@+id/edt_sip"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_margin="10dp"
                 android:layout_marginTop="@dimen/layout_margin"
                 android:layout_weight="1"
@@ -151,6 +154,7 @@
             <EditText
                 android:id="@+id/edt_number"
                 android:layout_width="0dp"
+                android:inputType="number"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginTop="@dimen/layout_margin"
@@ -189,6 +193,7 @@
                 android:id="@+id/edt_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_margin="10dp"
                 android:layout_marginTop="@dimen/layout_margin"
                 android:layout_weight="1"
@@ -227,6 +232,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:inputType="number"
                 android:layout_marginTop="@dimen/layout_margin"
                 android:layout_weight="1"
                 android:background="@drawable/edit_background"
