--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -77,6 +77,44 @@
                     android:drawablePadding="@dimen/view_padding" />
             </LinearLayout>
 
+
+            <LinearLayout
+                android:id="@+id/linear1_cust_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/txt1_cust_id"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/layout_margin"
+                    android:layout_weight="1"
+                    android:text="@string/cust_id"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/black" />
+
+                <EditText
+                    android:id="@+id/edt1_cust_id"
+                    android:layout_width="0dp"
+                    android:inputType="textPersonName"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/layout_margin"
+                    android:layout_weight="1"
+                    android:background="@drawable/edit_background"
+                    android:drawablePadding="@dimen/view_padding"
+                    android:hint="@string/hintcustid"
+                    android:maxLength="50"
+                    android:padding="@dimen/view_padding"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
+
+
+
             <LinearLayout
                 android:id="@+id/linear1_sub_source"
                 android:layout_width="match_parent"
