--- a/app/src/main/res/layout/login_acitivity.xml
+++ b/app/src/main/res/layout/login_acitivity.xml
@@ -17,7 +17,7 @@
     <LinearLayout
         android:id="@+id/login_layout"
         android:layout_width="match_parent"
-        android:layout_height="290dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
         android:background="@color/colorWhite"
         android:layout_marginLeft="30dp"
@@ -32,6 +32,7 @@
             android:layout_gravity="center_horizontal"
             android:padding="@dimen/layout_padding"
             android:text="@string/login"
+            android:textSize="35sp"
             android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/coloryellow" />
@@ -90,7 +91,7 @@
             android:text="@string/forgetPassword"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/colorBlue"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
